[gd_scene load_steps=4 format=3 uid="uid://bsje2hlqa7nq8"]

[ext_resource type="Script" path="res://game/navigation/galaxy_cell.gd" id="1_57l2r"]
[ext_resource type="Script" path="res://game/navigation/galaxy_node.gd" id="2_qo215"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w8t58"]
radius = 11.6619

[node name="GalaxyCell" type="Node2D" node_paths=PackedStringArray("node")]
script = ExtResource("1_57l2r")
node = NodePath("GalaxyNode")

[node name="GalaxyNode" type="Node2D" parent="." node_paths=PackedStringArray("collider")]
script = ExtResource("2_qo215")
collider = NodePath("Area2D/CollisionShape2D")

[node name="Area2D" type="Area2D" parent="GalaxyNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GalaxyNode/Area2D"]
shape = SubResource("CircleShape2D_w8t58")

[connection signal="selected" from="GalaxyNode" to="." method="_on_galaxy_node_selected"]
[connection signal="input_event" from="GalaxyNode/Area2D" to="GalaxyNode" method="_on_collider_input_event"]
